Fixed cntact email overflowing

--- a/style.css
+++ b/style.css
@@ -461,4 +461,11 @@ nav #theme-toggle {
     font-size: 1rem;
     padding: 0 1rem;
   }
+
+  #contact h2 {
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.2rem;
+  }
 }
